2_declarative rendering & data objects_s1

--- a/Project 1 - Self Service Machine - Initial/index.html
+++ b/Project 1 - Self Service Machine - Initial/index.html
@@ -16,7 +16,7 @@
         <main id="app">
             
             <section class="items">
-                <h4>Pick your items</h4>
+                <h4>{{ message }}</h4>
                 <div class="product selected">
                     <div class="photo">
                         <img src="img/big-mac.png">
@@ -170,7 +170,7 @@
 
         </main>
 
-        
+        <script src="https://unpkg.com/vue@next"></script>
         <script src="scripts.js"></script>
     </body>
 
