--- a/Project 1 - Self Service Machine - Initial/index.html
+++ b/Project 1 - Self Service Machine - Initial/index.html
@@ -41,7 +41,7 @@
              
             </section>
 
-            <section class="summary">
+            <section class="summary" v-if="total()>0">
                 <strong>Order Details</strong>
                 <table>
                     <thead>
@@ -61,7 +61,7 @@
                         
                         <tr>
                             <th>Total</th>
-                            <th>0.00</th>
+                            <th>{{ total() }}</th>
                         </tr>
                     </tbody>
                 </table>
