--- a/Project 2 - Working With Forms - Initial/index.html
+++ b/Project 2 - Working With Forms - Initial/index.html
@@ -43,13 +43,13 @@
                 <form>
                 
                 <label for="fname">First name:</label><br>
-                <input type="text" id="fname" name="fname"><br>
+                <input type="text" id="fname" name="fname" v-model="newMember.fname"><br>
                 
                 <label for="lname">Last name:</label><br>
-                <input type="text" id="lname" name="lname"><br>
+                <input type="text" id="lname" name="lname" v-model="newMember.lname"><br>
 
                 <label for="instrument">Instrument:</label><br>
-                <select name="instrument" id="instrument">
+                <select name="instrument" id="instrument" v-model="newMember.instrument">
                     <option value="Bass">Bass</option>
                     <option value="Electric Guitar">Electric Guitar</option>
                     <option value="Acoustic Guitar">Acoustic Guitar</option>
