--- a/Project 2 - Working With Forms - Initial/index.html
+++ b/Project 2 - Working With Forms - Initial/index.html
@@ -56,7 +56,7 @@
                     <option value="Drums">Drums</option>
                     </select>
                     <br><br>
-                <input type="button" value="Add">
+                <input type="button" value="Add" @click="addMember()">
                 </form> 
             </section>
 
