--- a/Project 3 - Todo List - Initial/index.html
+++ b/Project 3 - Todo List - Initial/index.html
@@ -21,16 +21,18 @@
                 <h3>To-do List</h3>
                 
                 <div class="all-todos">
-                    <div v-for="todo in todos" 
+                    <div 
+                    v-for="todo in todos" 
                     class="single-todo"
-                    :class="{done : todo.done}">
+                    :class="{done : todo.done}"
+                    @click="todo.done = !todo.done" >
                         <p>{{ todo.text }}</p>
                     </div>
                   
 
                 </div>
 
-                <button class="clear">Clear All</button>
+                <button class="clear" @click="todos=[]">Clear All</button>
 
                 <input type="text" placeholder="Add new to-do" v-model="newTodo.text">
                 <button class="add" @click="addTodo()">Add</button>
