--- a/Project 3 - Todo List - Initial/index.html
+++ b/Project 3 - Todo List - Initial/index.html
@@ -25,17 +25,17 @@
                     v-for="todo in todos" 
                     class="single-todo"
                     :class="{done : todo.done}"
-                    @click="todo.done = !todo.done; storeTodos()" >
+                    @click="todo.done = !todo.done" >
                         <p>{{ todo.text }}</p>
                     </div>
                   
 
                 </div>
 
-                <button class="clear" @click="todos=[]; storeTodos()" v-if="todos.length">Clear All</button>
+                <button class="clear" @click="todos=[]" v-if="todos.length">Clear All</button>
 
                 <input type="text" placeholder="Add new to-do" v-model="newTodo.text">
-                <button class="add" @click="addTodo(); storeTodos()">Add</button>
+                <button class="add" @click="addTodo()">Add</button>
 
                 <div class="instructions">
                     Instructions:
